# ALPS

./: .cvsignore  .gitignore  CITATION.md  CITATIONS.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake  ChangeLog  ChangeLog.0  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  README  README-developer  README-light  README-package.txt  README-py.md  README.md  README.txt  TODO  Welcome.txt  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  configure.in  pyproject.toml
applications/: CITATIONS.txt  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README-developer  acinclude.m4  configure  configure.ac
applications/config/: ac_ietl.m4  ac_lpsolve.m4  config.h.in  diff-looper.sh  import-looper.sh  install-sh  ltmain.sh  preamble.in
applications/diag/: CMakeLists.txt  Makefile.am  Makefile.in  diag.h  matrix.h
applications/dmft/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
applications/dmrg/: CMakeLists.txt  Makefile.am  Makefile.in
applications/doc/: index.html  workflow.fig
applications/mc/: CMakeLists.txt  Makefile.am  Makefile.in
applications/qmc/: CMakeLists.txt  Makefile.am  Makefile.in  qmc.h  qmc.ngs.h
applications/test/: Makefile.am  Makefile.in  energy.xsl.in  parm.in
applications/tutorial/: lattices.xml  models.xml
doc/: CMakeLists.txt  Makefile.am  Makefile.in  autodoc.in  bb2db.in  bitops.html  catalog.xml.in  config.html  db2html.in  db2pdf.in  doxygen.conf.in  expression.html  fixed_capacity.html  functional.html  index-light.html  index.html  index_general.html  license.html  math.html  parameterlist.html  parameters.html  random.html  setup.html  signal.html  singledoc.in  stringvalue.html  typetraits.html  valuetype.html  vectormath.html  vectortraits.html
doc/alea/: abstractsimpleobservable.html  binning.html  index.html  observable.html  observableset.html  obsvalue.html  recordableobservable.html  signedobservable.html  simpleobservable.html  simpleobseval.html
doc/lattice/: boundary.html  coordinatelattice.html  disorder.html  graph.html  graph_helper.html  graph_traits.html  graphconcepts.html  graphproperties.html  helperconcepts.html  hypercubic.html  index.html  lattice.html  latticeconcepts.html  latticedescriptor.html  latticegraph.html  latticegraphdescriptor.html  latticelibrary.html  library.html  parity.html  propertymap.html  simplecell.html  simplelattice.html  unitcell.html
doc/model/: index.html
doc/osiris/: comm.html  dump.html  index.html  mpdump.html  os.html  parameterlist.html  parameters.html  process.html  stdmap.html  stdpair.html  stdstring.html  stdvalarray.html  stdvector.html  stringvalue.html  valuetype.html  xdrdump.html
doc/parser/: index.html  palm.html  parser.html  xml.html  xmlattributes.html  xmlstream.html
doc/scheduler/: implementing.html  index.html  montecarlo.html  running.html  scheduler.html  signal.html
doc/sphinx/: Makefile  modules.txt
doc/src/: alea.qbk  alps.qbk  embedding.counter.cpp  embedding.counter.hpp  embedding.list.cpp  embedding.synopsis.hpp  general.qbk  getting_started.qbk  hdf5.qbk  ietl.qbk  ietl.qbk.in  lattice.qbk  model.qbk  nauty.simple.cpp  nisy.coloring.cpp  nisy.generator.cpp  nisy.generator.hpp  nisy.synopsis.hpp  osiris.qbk  overview.qbk  parser.qbk  random.qbk  scheduler.qbk  tools.qbk
doc/tool/: archive.html  index.html
doc/xsl/: doxygen2boostbook.xsl.in  html.xsl  navbar.xsl
example/ietl/: CMakeLists.txt  arnoldi1.C  arnoldi1.h  jacobi.cpp  jacobidavidson1.cpp  jacobidavidson2.cpp  lanczos1.cpp  lanczos2.cpp  lanczos3.cpp  lanczos4.cpp  solver.h  test_jd.cpp
example/ising/: CMakeLists.txt  alpscontrol.cpp  controlthread_tiny.cpp  export.py  ising.hpp  ising.py  ising_parallel.hpp  main_controlthread_tiny.cpp  main_dualthread_tiny.cpp  main_export.py  main_ising.py  main_mpi.cpp  main_mpi2.cpp  main_mpi_controlthread_tiny.cpp  main_mpi_dualthread_tiny.cpp  main_mpi_pscan.cpp  main_mpi_threaded.cpp  main_native.py  main_server_mpi_tiny.cpp  main_server_tiny.cpp  main_single.cpp  main_threaded.cpp  main_threaded_tiny.cpp  mpi.cpp  mpi_controlthread_tiny.cpp  mpi_pscan.cpp  mpi_server_tiny.cpp  mpi_ulfm.cpp  native.py  parallel.cpp  param.0  param.1  param.h5.0  param.h5.1  parapack.cpp  pyising.cpp  run_ising_ngs_python_single_test.cmake  run_ngs_ising_python_native_mpi_test.cmake  run_ngs_ising_python_native_test.cmake  run_ngs_mpi_threaded_test.cmake  (+4 more)
example/model/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  lattices.fabien.xml  lattices.xml  matrix.h  models.xml.in  parm_numeric  parm_numeric.in  parm_symbolic.in  print_numeric.C  print_numeric3.cpp  print_symbolic.C  print_symbolic3.cpp
example/ng/: CMakeLists.txt  TODO  ising.hpp  ising2.cpp  ising2.hpp  main.ipp
example/ngs/: CMakeLists.txt  ising.cpp  ising.hpp  ising2.cpp  ising2.hpp  ising_native.py  main.cpp  main.ipp  main2.cpp  main_mpi.cpp  main_mpi_threaded.cpp  main_single.cpp  main_threaded.cpp  ngs.cpp  ngs.hpp  p2h5.cpp  params.cpp  params2.cpp  run_ngs_mpi_test.cmake  run_ngs_mpi_threaded_test.cmake  run_ngs_single_test.cmake  tmp_solver_file.in.h5
example/parapack/: CMakeLists.txt  Makefile.am  Makefile.in
example/sampling/: CMakeLists.txt  Makefile.am  Makefile.in  fleas.h  fleas_correlated.C  (+4 more)
src/: CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in
tool/: .cvsignore  ALPS.xsl  CMakeLists.txt  ContiParameters.cpp  ContiParameters.hpp  DefaultModel.hpp  Makefile.am  Makefile.dep  Makefile.in  MaxEntHelper.cpp  MaxEntSimulation.cpp  QMCXML2text.xsl  TODO  alpspython.in  alpsvars.csh.in  alpsvars.sh.in  archive.cpp  archive2.cpp  archive2plot.xsl  archive_index.cpp  archive_index.hpp  archive_index2.cpp  archive_node.cpp  archive_node.hpp  archive_plot.cpp  archive_plot.hpp  archive_plot2.cpp  archive_sqlite.cpp  archive_sqlite.hpp  archive_xml.cpp  archive_xml.hpp  archivecat  changestylesheet.in  changestylesheet.xsl.in  checksign.C  compactrun.C  config.py.in  convert2html.in  convert2text.in  convert2xml.C  (+50 more)
tutorials/: CMakeLists.txt  cleanup.sh  runall.sh  runtutorial.sh  test_py.py  test_vt.py
(+3510 files in other folders)
